fixed header spacing

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -12,7 +12,8 @@ body {
 
 .header {
   display: flex;
-  width: 100vh;
+  box-sizing: border-box;
+  width: 100%;
   justify-content: space-between;
   padding: 10px;
 }
